<resources>
    <string name="app_name">Doodle</string>
    <string name="message_saved">Berjaya disimpan</string>
    <string name="message_error_saving">Tidak dapat disimpan</string>
    <string name="button_set_color">Set warna pen</string>
    <string name="label_blue">Biru</string>
    <string name="label_green">Hijau</string>
    <string name="label_red">Merah</string>
    <string name="label_alpha">Alfa</string>
    <string name="button_set_line_width">Set ketebalan pen</string>
    <string name="message_erase">Padam</string>
    <string name="button_erase">Padam</string>
    <string name="button_cancel">Kensel</string>
    <string name="menuitem_color">Warna dakwat</string>
    <string name="menuitem_line_width">Ketebalan pen</string>
    <string name="menuitem_erase">Pemadam getah</string>
    <string name="menuitem_clear">Padam semua</string>
    <string name="menuitem_save_image">Simpan gambar</string>
    <string name="title_color_dialog">Pilih acuan warna</string>
    <string name="title_line_width_dialog">Pilih ketebalan alat tulis</string>
</resources>
